--- a/client/base.css
+++ b/client/base.css
@@ -1,6 +1,50 @@
+:root {
+    --orange: #ffbd00;
+    --grey: #a3a3a3;
+}
+
 * {
     box-sizing: border-box;
     font-family: "Jost", sans-serif;
     font-weight: 400;
     /* Light: 300, Regular: 400, Medium: 500, Semibold: 600, Bold: 700 */
 }
+
+header {
+    padding-top: 2%;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+button {
+    flex-wrap: nowrap;
+    border: none;
+    background: none;
+    font-size: 175%;
+    color: var(--grey);
+}
+.logo {
+    height: 73px;
+}
+
+.profile-picture{
+    height: 73px;
+    border-radius: 50%;
+    padding: 3px;
+    border: 0.25em solid #a3a3a3;
+}
+
+.search-frame {
+    width:420px;
+    height:73px;
+    border: none;
+}
+
+body {
+    background: black;
+}
+
+
+
