--- a/client/search/search.css
+++ b/client/search/search.css
@@ -1,21 +1,11 @@
-header {
-    position: sticky;
-    top: -54px;
-    z-index: 2;
-}
-
-.search-bar {
-    display: flex;
-    justify-content: center;
-    padding: 2%;
-}
-
 .search-bar input {
-    width: 35%;
-    min-width: 200px;
-    padding: 1%;
+    min-width: 400px;
+    min-height: 50px;
+    padding: 0 3% 0 5%;
     border-radius: 4em;
     font-size: 1em;
-    border: 0.25em solid grey;
+    color: white;
+    border: 0.25em solid #a3a3a3;
     outline: none;
+    background: transparent;
 }
