--- a/client/base.css
+++ b/client/base.css
@@ -33,7 +33,7 @@ button {
     height: 73px;
     border-radius: 50%;
     padding: 3px;
-    border: 0.25em solid #a3a3a3;
+    border: 0.25em solid var(--orange);
 }
 
 .search-frame {
