Filter work in progress

--- a/client/base.css
+++ b/client/base.css
@@ -1,25 +1,30 @@
 :root {
     --orange: #ffbd00;
     --orange-50-opacity: rgba(255, 189, 0, 0.5);
+    --white-50-opacity: rgba(255, 255, 255, 0.5);
+    --white-33-opacity: rgba(255, 255, 255, 0.33);
     --grey: #a3a3a3;
     --grey-66-opacity: rgba(163, 163, 163, 0.66);
     --grey-50-opacity: rgba(163, 163, 163, 0.5);
     --grey-33-opacity: rgba(163, 163, 163, 0.33);
+    --black-50-opacity: rgba(0, 0, 0, 0.5);
 }
 
 * {
     box-sizing: border-box;
     font-family: "Jost", sans-serif;
     font-weight: 400; /* Light: 300, Regular: 400, Medium: 500, Semibold: 600, Bold: 700 */
+    transition: background-color 0.5s ease, color 1s ease, text-shadow 1s ease, box-shadow 1s ease;
+}
+
+body {
     background: url('images/background.png') no-repeat fixed;
-    transition: color 1s ease, text-shadow 1s ease, box-shadow 1s ease;
 }
 
 header {
+    grid-area: h;
     display: flex;
     align-items: center;
-    height: 100px;
-    padding-top: 2%;
     gap: 2%;
 }
 
@@ -56,7 +61,7 @@ header {
     height: 50px;
     padding: 0 3% 0 11%;
     border: 0.2em solid var(--grey);
-    border-radius: 4em;
+    border-radius: 35px;
     outline: none;
     background: url('images/symbol_search.png') no-repeat 15px center;
     background-size: 20px 20px;
