--- a/client/pages/home/home.css
+++ b/client/pages/home/home.css
@@ -1,114 +1,84 @@
-/* Importing base.css is not necessary here */
+@import url(../../base.css);
 
-/* Specify more specific selectors to avoid conflicts */
 body {
-    font-family: 'Jost', sans-serif;
-    background-color: #1c1c1c;
-    color: #ffffff;
+    display: grid;
+    grid-template-areas:
+        "h h"
+        "s m";
+    grid-template-columns: minmax(100px, 330px) minmax(300px, auto);
+    grid-template-rows: 135px auto;
     margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
 }
 
-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 20px;
-    background-color: #000000;
+#sidebar {
+    grid-area: s;
+    padding-left: 35px;
 }
-
-.logo {
-    height: 50px;
+.filter {
+    padding: 1px 15px 15px 15px;
+    border-radius: 35px;
+    background-color: var(--black-50-opacity);
 }
-
-.search-frame {
-    flex-grow: 1;
-    margin: 0 20px;
-    border: none;
-    height: 40px;
-}
-
-.button {
-    background-color: #ffcc00;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    color: #000000;
-    font-weight: bold;
-}
-
-.profile-picture {
-    height: 50px;
-    border-radius: 50%;
-    border: 2px solid #ffcc00;
-}
-
-.container {
-    background-color: rgba(0, 0, 0, 0.5);
-    flex-grow: 1;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-start;
-    padding: 20px;
-}
-
-.advanced-search {
-    background-color: rgba(0, 0, 0, 0.5) !important; /* Adjust opacity as needed */
-    padding: 20px;
-    border-radius: 10px;
-    width: 300px;
-}
-
-.advanced-search h3 {
-    color: #ffcc00;
+.filter h3 {
     font-size: 20px;
-    margin-bottom: 20px;
+    color: #ffcc00;
+    text-shadow: 0 0 3px black;
+    padding-left: 10px;
 }
-
 .filter-section {
     margin-bottom: 20px;
 }
 
+.filter-label {
+    color: white;
+    text-shadow: 0 0 3px black;
+    padding-left: 10px;
+}
 .tags {
+    color: white;
+    text-shadow: 0 0 3px black;
     display: flex;
     flex-wrap: wrap;
 }
-
 .tag {
-    background-color: #444444; /* Slightly lighter background color for tags */
-    color: #ffcc00;
-    border-radius: 5px;
-    padding: 5px 10px;
+    background-color: var(--white-33-opacity);
+    border-radius: 35px;
+    padding: 2px 10px;
     margin: 5px;
     cursor: pointer;
 }
-
 .tag:hover {
     background-color: #555555;
 }
-
-input[type="range"] {
-    width: 100%;
-    margin-top: 10px;
-}
-
-.sort-options {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.sort-option {
-    background-color: #444444; /* Slightly lighter background color for sort options */
-    color: #ffcc00;
-    border-radius: 5px;
-    padding: 5px 10px;
-    margin: 5px;
+.rating-bar input {
+    overflow: hidden;
     cursor: pointer;
+    appearance: none;
+    height: 15px;
+    width: 90%;
+    margin: 0 10px 0 10px;
+    border-radius: 35px;
+    background-color: white;
+    box-shadow: 0 0 0 2px white;
+}
+input::-webkit-slider-thumb {
+    appearance: none;
+    height: 18px;
+    width: 18px;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    background-color: var(--orange);
+    box-shadow: -208px 0 0 200px var(--orange);
+}
+.rating-bar .slide-value {
+    font-size: 27px;
+    font-weight: 500;
+    color: black;
+    width: 70px;
+    text-align: center;
 }
 
-.sort-option:hover {
-    background-color: #555555;
+main {
+    grid-area: m;
+    padding: 30px 30px;
 }
