Filter work in progress (2)

--- a/client/base.css
+++ b/client/base.css
@@ -18,7 +18,7 @@
 }
 
 body {
-    background: url('images/background.png') no-repeat fixed;
+    background: url('images/background.png') no-repeat fixed center;
 }
 
 header {
