--- a/client/pages/home/home.css
+++ b/client/pages/home/home.css
@@ -48,7 +48,9 @@ body {
     cursor: pointer;
 }
 .tag:hover {
-    background-color: #555555;
+    color: black;
+    text-shadow: none;
+    background-color: white;
 }
 .rating-bar input {
     overflow: hidden;
@@ -58,16 +60,14 @@ body {
     width: 90%;
     margin: 0 10px 0 10px;
     border-radius: 35px;
-    background-color: white;
-    box-shadow: 0 0 0 2px white;
+    background-color: var(--white-50-opacity);
 }
 input::-webkit-slider-thumb {
     appearance: none;
     height: 18px;
     width: 18px;
     border-radius: 50%;
-    border: 2px solid #fff;
-    background-color: var(--orange);
+    background-color: white;
     box-shadow: -208px 0 0 200px var(--orange);
 }
 .rating-bar .slide-value {
