--- a/client/base.css
+++ b/client/base.css
@@ -92,6 +92,30 @@ button {
     box-shadow: 0 0 20px var(--grey-50-opacity);
 }
 
+.title-label {
+    font-size: 135%;
+    color: var(--orange);
+    text-shadow: 0 0 3px black;
+    padding-left: 10px;
+}
+.main-label {
+    font-size: 115%;
+    color: white;
+    text-shadow: 0 0 3px black;
+    padding-left: 10px;
+}
+.element-border {
+    padding: 20px 15px;
+    border-radius: 35px;
+    background-color: var(--black-50-opacity);
+}
+.element-container {
+    padding-top: 20px;
+}
+.element-inner-container {
+    padding-top: 5px;
+}
+
 /* Responsive Layout */
 @media (max-width: 930px) {
     .logo-container, .middle-container, .profile-container {
