--- a/client/base.css
+++ b/client/base.css
@@ -9,14 +9,12 @@
     --grey-33-opacity: rgba(163, 163, 163, 0.33);
     --black-50-opacity: rgba(0, 0, 0, 0.5);
 }
-
 * {
     box-sizing: border-box;
     font-family: "Jost", sans-serif;
     font-weight: 400; /* Light: 300, Regular: 400, Medium: 500, Semibold: 600, Bold: 700 */
-    transition: color 1s ease, font-weight 1s ease, text-shadow 1s ease, background-color 0.5s ease, box-shadow 1s ease, height 1s ease;
+    transition: color 1s ease, font-weight 1s ease, text-shadow 1s ease, background-color 0.5s ease, background 0.5s ease, box-shadow 1s ease, height 1s ease;
 }
-
 body {
     background: url('images/background.png') no-repeat fixed center;
 }
@@ -47,11 +45,14 @@ header {
 }
 
 .logo {
-    height: 73px;
+    height: 70px;
 }
 .logo-small {
     display: none;
-    height: 73px;
+    height: 70px;
+}
+.logo:hover, .logo-small:hover {
+    height: 75px;
 }
 
 .search-bar input {
@@ -63,8 +64,12 @@ header {
     border: 0.2em solid var(--grey);
     border-radius: 35px;
     outline: none;
-    background: url('images/symbol_search.png') no-repeat 15px center;
-    background-size: 20px 20px;
+    background: url('images/symbol_search_grey.png') no-repeat 15px center;
+    background-size: 20px;
+}
+.search-bar input:hover {
+    background: url('images/symbol_search_white.png') no-repeat 15px center;
+    background-size: 20px;
 }
 .search-bar.input-hovered input {
     box-shadow: 0 0 15px var(--grey-33-opacity);
@@ -79,16 +84,18 @@ header {
     background: none;
 }
 .header-btn:hover {
+    font-weight: 600;
     text-shadow: 0 0 20px var(--grey-66-opacity);
 }
 
 .profile-picture {
-    height: 75px;
+    height: 70px;
     border-radius: 50%;
     /*padding: 4px;*/
     /*border: 0.25em solid var(--orange);*/
 }
 .profile-picture:hover {
+    height: 75px;
     box-shadow: 0 0 20px var(--grey-50-opacity);
 }
 
@@ -136,7 +143,7 @@ header {
         display: block;
     }
 
-    .button {
+    .header-btn {
         display: none;
     }
 }
@@ -164,8 +171,11 @@ header {
         width: 250px;
         background: transparent;
     }
+    .search-bar input:hover {
+        background: transparent;
+    }
 
-    .button {
+    .header-btn {
         display: none;
     }
 }
