--- a/client/pages/login/login.css
+++ b/client/pages/login/login.css
@@ -9,13 +9,13 @@ body {
     margin: 0;
 }
 main {
-    padding-top: 10%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .element-border {
+    margin-top: 5%;
     width: 400px;
 }
 input {
@@ -32,6 +32,7 @@ input {
 }
 
 .btn-container {
+    margin-top: 5%;
     display: flex;
     align-items: center;
     justify-content: space-between;
