--- a/client/pages/home/home.css
+++ b/client/pages/home/home.css
@@ -38,10 +38,10 @@ body {
     cursor: pointer;
     appearance: none;
     height: 15px;
-    width: 90%;
-    margin: 0 10px 0 10px;
+    width: calc(100% - 15px);
     border-radius: 35px;
     background-color: var(--white-50-opacity);
+    margin-left: 7px;
 }
 input::-webkit-slider-thumb {
     appearance: none;
@@ -57,5 +57,39 @@ input::-webkit-slider-thumb {
 
 main {
     grid-area: m;
-    padding: 30px 30px;
+    padding: 0 30px 0 30px;
+}
+
+.cocktails-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 10px;
+}
+.cocktail-container {
+    position: relative;
+    margin: 10px;
+    border-radius: 10px;
+    text-align: center;
+}
+.cocktail-title-label {
+    font-size: 125%;
+    color: white;
+    text-shadow: 0 0 5px black, 0 0 10px black;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 10px;
+    display: block;
+    margin-bottom: 5px;
+}
+.cocktail-img {
+    width: 100%;
+    max-width: 200px;
+    height: auto;
+    border-radius: 10px;
+    box-shadow: 0 3px 5px var(--black-50-opacity);
+}
+
+.cocktails-container:hover > :not(:hover) {
+    opacity: 0.5;
 }
