--- a/client/pages/home/home.css
+++ b/client/pages/home/home.css
@@ -49,7 +49,7 @@ input::-webkit-slider-thumb {
     width: 15px;
     border-radius: 50%;
     background-color: white;
-    box-shadow: 0 0 5px 2px var(--black-50-opacity), 208px 0 0 200px white;
+    box-shadow: 0 0 5px 2px var(--black-50-opacity), 208px 0 0 200px var(--orange);
 }
 .slide-value {
     color: white;
@@ -74,12 +74,13 @@ main {
 .cocktail-title-label {
     font-size: 125%;
     color: white;
-    text-shadow: 0 0 5px black, 0 0 10px black;
+    text-shadow: 0 0 5px black, 0 0 10px black, 0 0 15px black;
     position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
+    left: 10px;
+    right: 10px;
     bottom: 10px;
     display: block;
+    text-align: center;
     margin-bottom: 5px;
 }
 .cocktail-img {
