--- a/client/pages/profile/profile.css
+++ b/client/pages/profile/profile.css
@@ -1,1 +1,16 @@
 @import url(../../base.css);
+
+body {
+    display: grid;
+    grid-template-areas:
+        "h"
+        "m";
+    grid-template-rows: 135px auto;
+    margin: 0;
+}
+main {
+    grid-area: m;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
