--- a/client/pages/home/home.css
+++ b/client/pages/home/home.css
@@ -69,28 +69,54 @@ input::-webkit-slider-thumb {
 }
 .cocktail-container {
     position: relative;
+    max-width: 200px;
     margin: 10px;
-    border-radius: 10px;
     text-align: center;
+}
+.cocktail-container::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    max-width: 200px;
+    border-radius: 10px;
+    background-image: var(--black-gradient);
+    pointer-events: none; /* Ensure the overlay does not interfere with any interactions */
 }
 .cocktail-title-label {
     font-size: 125%;
     color: white;
     text-shadow: 0 0 5px black, 0 0 10px black, 0 0 15px black;
+    display: block;
     position: absolute;
     left: 10px;
     right: 10px;
     bottom: 10px;
-    display: block;
+    max-width: 200px;
     text-align: center;
     margin-bottom: 5px;
 }
+.cocktail-rating-label {
+    font-size: 100%;
+    color: white;
+    text-shadow: 0 0 5px var(--black-50-opacity), 0 0 10px black;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    margin-left: 5px;
+}
 .cocktail-img {
+    box-shadow: 0 3px 5px var(--black-50-opacity);
+}
+.cocktail-container .cocktail-img {
+    display: block;
     width: 100%;
     max-width: 200px;
     height: auto;
     border-radius: 10px;
-    box-shadow: 0 3px 5px var(--black-50-opacity);
+    z-index: 0;
 }
 .cocktails-container:hover > :not(:hover) {
     opacity: 0.5;
