--- a/client/pages/home/home.css
+++ b/client/pages/home/home.css
@@ -22,6 +22,17 @@ footer {
     grid-area: f;
 }
 
+.tag:hover {
+    color: black;
+    text-shadow: none;
+    background-color: white;
+}
+.tag.selected {
+    color: black;
+    text-shadow: none;
+    background-color: white;
+}
+
 .rating-bar input {
     overflow: hidden;
     cursor: pointer;
