--- a/client/pages/recipe/recipe.css
+++ b/client/pages/recipe/recipe.css
@@ -9,14 +9,23 @@ body {
     grid-template-rows: 135px auto 35px;
     margin: 0;
 }
-main {
-    grid-area: m;
-    padding: 0 30px 0 30px;
-}
-footer {
-    grid-area: f;
-}
 
 .element-border {
     padding-top: 15px;
 }
+.element-inner-container {
+    color: white;
+}
+
+.cocktail-container,
+.cocktail-container::before,
+.cocktail-container .cocktail-img {
+    max-width: 250px;
+}
+.cocktail-title-label {
+    font-size: 150%;
+}
+.cocktail-rating-label {
+    font-size: 125%;
+}
+
