--- a/client/base.css
+++ b/client/base.css
@@ -1,24 +1,40 @@
 :root {
     --orange: #ffbd00;
     --orange-50-opacity: rgba(255, 189, 0, 0.5);
+
     --white-50-opacity: rgba(255, 255, 255, 0.5);
     --white-33-opacity: rgba(255, 255, 255, 0.33);
+
     --grey: #a3a3a3;
     --grey-66-opacity: rgba(163, 163, 163, 0.66);
     --grey-50-opacity: rgba(163, 163, 163, 0.5);
     --grey-33-opacity: rgba(163, 163, 163, 0.33);
+
     --black-66-opacity: rgba(0, 0, 0, 0.66);
     --black-50-opacity: rgba(0, 0, 0, 0.5);
+
+    --green: #4b930d;
+    --green-50-opacity: rgba(75, 147, 13, 0.5);
+
+    --yellow: #d9c329;
+    --yellow-50-opacity: rgba(217, 195, 41, 0.5);
+
+    --red: #ff351c;
+    --red-50-opacity: rgba(255, 53, 28, 0.5);
+
     --black-gradient: linear-gradient(to bottom, transparent, transparent, var(--black-66-opacity));
+
+    --cocktail-img-size: 200px;
 }
 * {
     box-sizing: border-box;
     font-family: "Jost", sans-serif;
-    font-weight: 400; /* Light: 300, Regular: 400, Medium: 500, Semibold: 600, Bold: 700 */
+    font-weight: 400; /* Light: 300, Regular: 400, Medium: 500, Semi-bold: 600, Bold: 700 */
     transition:
             color 1s ease,
             font-weight 1s ease,
             text-shadow 1s ease,
+            filter 0.5s ease,
             box-shadow 0.5s ease,
             height 1s ease,
             opacity 0.5s ease,
@@ -64,16 +80,21 @@ footer {
     gap: 35px;
 }
 
-.logo {
+.logo,
+.logo-small {
     height: 70px;
+    filter: drop-shadow(0 0 5px black);
 }
 .logo-small {
     display: none;
-    height: 70px;
 }
-.logo:hover,
+.logo:hover {
+    height: 75px;
+    filter: drop-shadow(0 0 5px var(--grey-66-opacity));
+}
 .logo-small:hover {
     height: 75px;
+    filter: drop-shadow(0 0 5px var(--orange-50-opacity));
 }
 
 .search-bar input {
@@ -109,7 +130,7 @@ footer {
     text-shadow: 0 0 20px var(--grey-66-opacity);
 }
 .btn-bold-orange {
-    font-size: 125%;
+    font-size: 135%;
     font-weight: 500;
     color: black;
     border: none;
@@ -155,6 +176,8 @@ footer {
     padding-top: 20px;
 }
 .element-inner-container {
+    color: white;
+    font-size: 110%;
     padding-top: 5px;
 }
 .element-input {
@@ -169,19 +192,51 @@ footer {
     padding: 5px 15px;
     margin-left: 5px;
 }
-
 .tags {
-    color: white;
-    text-shadow: 0 0 3px black;
     display: flex;
     flex-wrap: wrap;
+    justify-content: flex-start;
+}
+.tag-inner-container {
+    display: inline-flex;
+    flex-wrap: wrap;
+}
+.btn-inner-container {
+    display: inline-flex; /* Display button set in a single row */
+    flex-wrap: wrap; /* Allow buttons to wrap if needed */
 }
 .tag {
+    font-size: 110%;
+    color: white;
+    text-shadow: 0 0 3px black;
     border-radius: 35px;
     background-color: var(--white-33-opacity);
     padding: 2px 10px;
     margin: 5px;
     cursor: pointer;
+}
+.btn-part {
+    height: var(--btn-part-size);
+    width: var(--btn-part-size);
+    border-radius: 50%;
+    margin: 5px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.btn-img {
+    height: var(--btn-img-size);
+    filter: drop-shadow(0 0 3px var(--black-66-opacity));
+}
+.btn-recommend {
+    background-color: var(--green-50-opacity);
+}
+.btn-recommend-no {
+    background-color: var(--red-50-opacity);
+}
+.btn-pin {
+    background-color: var(--yellow-50-opacity);
 }
 
 .cocktails-container {
@@ -191,7 +246,6 @@ footer {
 }
 .cocktail-container {
     position: relative;
-    max-width: 200px;
     margin: 10px;
     text-align: center;
 }
@@ -202,7 +256,6 @@ footer {
     left: 0;
     width: 100%;
     height: 100%;
-    max-width: 200px;
     border-radius: 10px;
     background-image: var(--black-gradient);
     pointer-events: none;
@@ -221,7 +274,7 @@ footer {
     margin-bottom: 5px;
 }
 .cocktail-rating-label {
-    font-size: 100%;
+    font-size: 110%;
     color: white;
     text-shadow: 0 0 5px var(--black-50-opacity), 0 0 10px black;
     position: absolute;
@@ -235,10 +288,15 @@ footer {
 .cocktail-container .cocktail-img {
     display: block;
     width: 100%;
-    max-width: 200px;
     height: auto;
     border-radius: 10px;
     z-index: 0;
+}
+.cocktail-container,
+.cocktail-container::before,
+.cocktail-container .cocktail-img {
+    max-width: var(--cocktail-img-size);
+    max-height: var(--cocktail-img-size);
 }
 
 /* Responsive Layout */
