--- a/client/pages/recipe/recipe.css
+++ b/client/pages/recipe/recipe.css
@@ -64,15 +64,22 @@ body {
     border-radius: 35px;
 }
 
-.no-bullets {
-    padding-left: 0;
+.ingredients .element-inner-container {
+    max-height: 250px;
 }
-.no-bullets li {
-    margin-bottom: 5px;
+.ingredients.exceeds-height .element-inner-container {
+    display: grid;
+    grid-template-columns: max-content auto;
+    overflow: auto;
+    column-gap: 50px;
+    align-content: start;
+}
+.bullets {
+    display: contents;
 }
 
 /* Responsive Layout */
-@media (max-width: 1000px) {
+@media (max-width: 1100px) {
     :root {
         --base-font-size: 0.9rem;
         --title-font-size: 1.8rem;
@@ -82,7 +89,11 @@ body {
     }
 }
 
-@media (max-width: 750px) {
+@media (max-width: 930px) {
+    body * {
+        justify-items: center;
+        text-align: center;
+    }
     .element-border {
         grid-template-areas:
         "img"
@@ -90,5 +101,16 @@ body {
         "ingredients"
         "instructions";
         grid-template-columns: auto;
+    }
+
+    .ingredients .element-inner-container {
+        max-height: none;
+    }
+    .ingredients.exceeds-height .element-inner-container {
+        display: block;
+        column-count: 1;
+    }
+    .tags {
+        justify-content: center;
     }
 }
