--- a/client/pages/profile/profile.css
+++ b/client/pages/profile/profile.css
@@ -6,6 +6,7 @@
     --cocktail-img-size: 220px;
     --btn-part-size: 40px;
     --btn-img-size: 25px;
+    --profile-picture-size: 270px;
 }
 body {
     display: grid;
@@ -48,14 +49,15 @@ body {
     border-radius: 200px 200px 35px 35px;
 }
 .profile-picture-container {
-    width: 100%;
+    width: var(--profile-picture-size);
+    height: var(--profile-picture-size);
     padding-top: 15px;
     display: flex;
     justify-content: center;
 }
 .profile-picture {
     width: 100%;
-    height: auto;
+    height: 100%;
     border-radius: 50%;
     box-shadow: 0 3px 10px black;
 }
